@@ -3,29 +3,29 @@ import com.github.spotbugs.snom.SpotBugsTask
 plugins {
   id 'java-library'
   id 'maven-publish'
-  id 'io.freefair.lombok' version '6.5.1'
-  id 'com.diffplug.spotless' version '6.12.0'
-  id 'com.github.spotbugs' version '5.0.13'
+  id 'io.freefair.lombok' version '8.6'
+  id 'com.diffplug.spotless' version '6.25.0'
+  id 'com.github.spotbugs' version '6.0.7'
 }
 
-group 'com.waracle.result'
-version '1.0-SNAPSHOT'
+group 'uk.co.josephearl.result'
+version '1.0.0-SNAPSHOT'
 
 repositories {
   mavenCentral()
 }
 
 dependencies {
-  testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
-  testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
-  testImplementation 'org.mockito:mockito-junit-jupiter:4.9.0'
-  testImplementation 'org.assertj:assertj-core:3.23.1'
-  testImplementation 'nl.jqno.equalsverifier:equalsverifier:3.11.1'
+  testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.2'
+  testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.2'
+  testImplementation 'org.mockito:mockito-junit-jupiter:5.10.0'
+  testImplementation 'org.assertj:assertj-core:3.25.3'
+  testImplementation 'nl.jqno.equalsverifier:equalsverifier:3.15.7'
 }
 
 java {
-  sourceCompatibility = JavaVersion.VERSION_17
-  targetCompatibility = JavaVersion.VERSION_17
+  sourceCompatibility = JavaVersion.VERSION_21
+  targetCompatibility = JavaVersion.VERSION_21
   withJavadocJar()
   withSourcesJar()
 }
@@ -36,22 +36,17 @@ compileJava {
 }
 
 compileTestJava {
-  sourceCompatibility = JavaVersion.VERSION_19
-  targetCompatibility = JavaVersion.VERSION_19
+  sourceCompatibility = JavaVersion.VERSION_21
+  targetCompatibility = JavaVersion.VERSION_21
   options.encoding = 'UTF-8'
-  options.compilerArgs << '--enable-preview'
 }
 
 test {
   useJUnitPlatform()
-  jvmArgs '--enable-preview'
 }
 
 spotless {
   java {
-    // Google Java format cannot handle record patterns yet
-    // https://github.com/google/google-java-format/issues/865
-    targetExclude('src/test/java/com/waracle/result/ResultExample.java')
     importOrder()
     removeUnusedImports()
     googleJavaFormat()
@@ -86,7 +81,6 @@ publishing {
   }
   repositories {
     maven {
-      name = 'GitHubPackages'
       url = 'https://maven.pkg.github.com/josephearl/result'
       credentials {
         username = System.getenv('GITHUB_ACTOR')
